# computational-linguistics

./: .gitignore  README.md  pyproject.toml  raport.md
lab1/: README.md  raport.md  task1.md
lab1/src/bdh/: README.md  evaluate_bdh.py  pyproject.toml  train_updated.py
lab1/src/data/: data.py  process_data.ipynb
lab1/src/gru/: model.py  train.py
lab1/src/transformer/: main.ipynb
lab1/src/utils/: evaluate.py  tokenization.py
lab2/: 2-tokenization.md  NOTES.md  evaluate.py  main.py  pyproject.toml
lab2/src/data/: data.py
lab2/src/tokenizers/: tokenizers.py
lab2/src/transformer/: model.py  train.py
src/bdh/: main.py  train2.py
src/bdh/doc/: bdh_vs_gpt.txt  bdh_vs_gpt2.txt
src/data/: process_data.ipynb
src/gru/: model.py  train.py
src/transformer/: main.ipynb  model.py  train.py
src/utils/: evaluate.py
